--- a/machine.html
+++ b/machine.html
@@ -47,7 +47,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rokk3r.workable.com/j/1701662182'>Rokk3r - Jobs: Machine Learning Engineer - Apply online</a></h5> 
+<h5><a href='https://rokk3r.workable.com/j/1701662182'>Rokk3r - Jobs: Machine Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Bogot?</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -220,7 +220,7 @@ federal?...</p>
 <p>2019?7?10? ... Experience using TensorFlow, PyTorch, Chainer, Caffe, or other deep learning 
 frameworks; Experience with data analysis and development using the cloud?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vimeo/jobs/1783179'>Job Application for Senior Machine Learning Engineer, ML ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/vimeo/jobs/1783179'>Job Application for Senior Machine Learning Engineer, ML ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... About the team: Video is 80% of today's global Internet traffic. The Engineering 
 team at Vimeo is building AI-driven tools to help anyone who wants to make a?...</p>
@@ -333,7 +333,7 @@ knowledge and outstanding database, data analytics and programming skills.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/phdata/jobs/1461947'>Job Application for Machine Learning Operations Engineer at phData</a></h5> 
+<h5><a href='https://boards.greenhouse.io/phdata/jobs/1461947'>Job Application for Machine Learning Operations Engineer at phData</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -425,12 +425,12 @@ Position] at Mercari, inc.</p>
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1766303'>Job Application for Research Scientist (Machine Learning/Deep ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1766303'>Job Application for Research Scientist (Machine Learning/Deep ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 7, 2019 ... You're a research scientist who has published in top tier conferences and are 
 passionate about having a positive impact on the world. You are enthusiastic?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/adroll/jobs/1775755'>Job Application for Sr. Machine Learning Infrastructure Engineer at AdRoll Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adroll/jobs/1775755'>Job Application for Sr. Machine Learning Infrastructure Engineer at AdRoll Group</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -473,7 +473,7 @@ technologies to solve a variety of problems; Translate user stories and business
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
